# nemo-ideviceinfo

./: AUTHORS  NEWS  README  configure.ac  meson.build  nemo-ideviceinfo.doap
data/: meson.build  nemo-ideviceinfo.gresource.xml  nemo-ideviceinfo.ui
po/: LINGUAS  POTFILES.in  ar.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  meson.build  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  (+3 more)
src/: Makefile.am  ideviceinfo-property-page.c  ideviceinfo-property-page.h  meson.build  nemo-afc2-warning-bar.c  nemo-afc2-warning-bar.h  nemo-ideviceinfo-resources.c  nemo-ideviceinfo-resources.h  nemo-ideviceinfo.c  nemo-ideviceinfo.h  nemo-idevinfo.c  rb-segmented-bar.c  rb-segmented-bar.h  test-property-tab.c
